--- a/views/category.html.twig
+++ b/views/category.html.twig
@@ -1,37 +1,47 @@
 <html>
     <head>
         <title>To Do List</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
     </head>
     <body>
-        <h1>{{ category.getName }}</h1>
+        <div class='container'>
+            <div class='row'>
+                <div class='col-sm-6'>
 
-        {% if tasks is not empty %}
-            <p>Here are all your tasks:</p>
-            <ul>
-                {% for task in tasks %}
-                    <li>Task: {{ task.getDescription }} Due: {{ task.getDueDate }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}
+                    <h1>{{ category.getName }}</h1>
 
-        <form action='/delete_tasks' method='post'>
-            <button type='submit'>delete</button>
-        </form>
+                    {% if tasks is not empty %}
+                        <p>Here are all your tasks:</p>
+                        <ul>
+                            {% for task in tasks %}
+                                <li>Task: {{ task.getDescription }} Due: {{ task.getDueDate }}</li>
+                            {% endfor %}
+                        </ul>
+                        <form action='/delete_tasks' method='post'>
+                            <button type='submit' class='btn btn-danger'>delete all</button>
+                        </form>
+                    {% endif %}
 
-        <h4>Add a task</h4>
 
-        <form action='/tasks' method='post'>
-            <input id='category_id' name="category_id" type="hidden" value="{{ category.getId()}}">
 
-            <label for='description'>Task Description</label>
-            <input id='description' name='description' type='text'>
+                    <h4>Add a task</h4>
 
-            <label for='due_date'></label>
-            <input type='text' placeholder='Due Date:'name='due_date' id="due_date">
+                    <form action='/tasks' method='post'>
+                        <input id='category_id' class='form-control' name="category_id" type="hidden" value="{{ category.getId()}}">
 
-            <button type='submit'>Add Task</button>
-        </form>
+                        <label for='description'></label>
+                        <input id='description' class='form-control' placeholder='Task Description' name='description' type='text'>
 
-        <p><a href='/'>Home</a></p>
+                        <label for='due_date'></label>
+                        <input type='text' class='form-control' placeholder='Due: YYYY-MM-DD'name='due_date' id="due_date">
+
+                        <button type='submit' class='btn btn-success'>Add Task</button>
+                    </form>
+
+                    <p><a href='/'>Home</a></p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
