--- a/views/delete_tasks.html.twig
+++ b/views/delete_tasks.html.twig
@@ -1,6 +1,8 @@
 <html>
 <head>
     <title>To Do List</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
 </head>
 <body>
     <h1>List cleared!</h1>
