--- a/views/category.html.twig
+++ b/views/category.html.twig
@@ -12,32 +12,28 @@
                     <h1>{{ category.getName }}</h1>
 
                     {% if tasks is not empty %}
-                        <p>Here are all your tasks:</p>
+                        <p>Here are all your tasks for {{ category.getName }}:</p>
                         <ul>
                             {% for task in tasks %}
-                                <li>Task: {{ task.getDescription }} Due: {{ task.getDueDate }}</li>
+                                <li>{{ task.getDescription }}</li>
                             {% endfor %}
                         </ul>
-                        <form action='/delete_tasks' method='post'>
-                            <button type='submit' class='btn btn-danger'>delete all</button>
-                        </form>
+
                     {% endif %}
 
-
-
-                    <h4>Add a task</h4>
-
-                    <form action='/tasks' method='post'>
-                        <input id='category_id' class='form-control' name="category_id" type="hidden" value="{{ category.getId()}}">
-
-                        <label for='description'></label>
-                        <input id='description' class='form-control' placeholder='Task Description' name='description' type='text'>
-
-                        <label for='due_date'></label>
-                        <input type='text' class='form-control' placeholder='Due: YYYY-MM-DD'name='due_date' id="due_date">
-
-                        <button type='submit' class='btn btn-success'>Add Task</button>
+                    <form action='/add_tasks' method='post'>
+                        <input id="category_id" name="category_id" type="hidden" value="{{ category.getId }}">
+                                <label for="task_id">Select a task</label>
+                                <select id='task_id' name='task_id' type='text'>
+                                  {% for task in all_tasks %}
+                                    <option value="{{ task.getId }}"> {{ task.getDescription }} </option>
+                                  {% endfor %}
+                                </select>
+                                <button type='submit'>Add task</button>
                     </form>
+
+
+                    <p><a href="/categories/{{ category.getId }}/edit">Edit this category</a></p>
 
                     <p><a href='/'>Home</a></p>
                 </div>
