--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -8,31 +8,8 @@
         <div class='container'>
             <h1>To Do List</h1>
 
-            <p>Create a new category:</p>
-
-            <form action="/categories" method="post">
-                <div class ='form-group'>
-                    <label for="name"></label>
-                    <input id="name" class='form-control' placeholder='Category name' name="name" type="text">
-
-                    <button type="submit" class='btn btn-success'>Add category</button>
-                </div>
-            </form>
-
-            {% if categories is not empty %}
-                <p>Your categories:</p>
-                <ul>
-                    {% for category in categories %}
-                        <li><a href="/categories/{{ category.getID }}">{{ category.getName }}</a></li>
-
-                    {% endfor %}
-                </ul>
-                <form action='/delete_categories' method='post'>
-                    <button type='submit' class='btn btn-danger'>delete all categories</button>
-                </form>
-            {% else %}
-                <p>There are no categories yet!</p>
-            {% endif %}
+        <h3><a href="/categories">Add or view a category</a></h3>
+        <h3><a href="/tasks">Add or view a task</a></h3>
         </div>
 
     </body>
