--- a/views/tasks.html.twig
+++ b/views/tasks.html.twig
@@ -3,26 +3,32 @@
     <title>To Do List</title>
 </head>
 <body>
-    <h1>To Do List</h1>
+    <h1>Tasks</h1>
 
     {% if tasks is not empty %}
         <p>Here are all your tasks:</p>
         <ul>
             {% for task in tasks %}
-                <li>{{ task.getDescription }}</li>
+                <li><a href="/tasks/{{ task.getId }}">{{ task.getDescription }}, {{ task.getDueDate }}</a></li>
             {% endfor %}
         </ul>
     {% endif %}
 
     <form action='/tasks' method='post'>
-        <label for='description'>Task Description</label>
-        <input id='description' name='description' type='text'>
+       <label for='description'>Task description:</label>
+       <input id='description' name='description' type='text'>
 
-        <button type='submit'>Add task</button>
-    </form>
-    <form action='/delete_tasks' method='post'>
-        <button type='submit'>delete</button>
-    </form>
-    <p><a href='/'>Home</a></p>
+       <label for='due_date'>Due Date</label>
+        <input id='due_date' name='due_date' placeholder= 'yyyy-mm-dd' type='text'>
+
+
+       <button type='submit'>Add task</button>
+   </form>
+
+   <form action='/delete_tasks' method='post'>
+       <button type='submit'>Clear</button>
+   </form>
+
+   <p><a href='/'>Home</a></p>
 </body>
 </html>
